# sistema-bancario

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: banco.hpp  cliente.hpp  conta.hpp  cpf.hpp  erros.hpp  interface.hpp
